--- a/.github/workflows/test-actions.yml
+++ b/.github/workflows/test-actions.yml
@@ -35,8 +35,8 @@ jobs:
           echo "NUMERIC_TEST=${{env.NUMERIC_TEST}}" >> $GITHUB_OUTPUT
           
 
-  # Post to Bluesky based on R output
-	repeat_data:
+  # Echo data
+  repeat_data:
     runs-on: ubuntu-latest
     needs: pass_data
     steps:
@@ -44,4 +44,4 @@ jobs:
           run: |
             echo "Repeating text: ${{ needs.test_data.outputs.TEXT_TEST }}"
             echo "Repeating boolean: ${{ needs.test_data.outputs.BOOLEAN_TEST }}"
-          	echo "Repeating numeric: ${{ needs.test_data.outputs.NUMERIC_TEST }}"
+            echo "Repeating numeric: ${{ needs.test_data.outputs.NUMERIC_TEST }}"
