--- a/.github/workflows/test-actions.yml
+++ b/.github/workflows/test-actions.yml
@@ -30,8 +30,7 @@ jobs:
 
       - name: Do math with variables
         run: |
-          echo "Adding numbers:" ${{env.NUMERIC_TEST + env.NUMERIC_TEST}}
-          echo "Adding various:" ${{env.NUMERIC_TEST + 7 }}
+          echo "Adding numbers:" $((${{env.NUMERIC_TEST}} + ${{env.NUMERIC_TEST}}))
           
       - name: Pass data to output for use in following jobs
         id: pass_data
