--- a/.github/workflows/test-actions.yml
+++ b/.github/workflows/test-actions.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Do math with variables
         run: |
-          echo "Adding numbers:" $((${{env.NUMERIC_TEST}} + ${{env.NUMERIC_TEST}}))
+          echo "Adding numbers:" $((${{env.NUMERIC_TEST}} + ${{env.NUMERIC_TEST}} + 9))
           
       - name: Pass data to output for use in following jobs
         id: pass_data
