--- a/.github/workflows/test-actions.yml
+++ b/.github/workflows/test-actions.yml
@@ -31,8 +31,8 @@ jobs:
           echo Numeric: $NUMERIC_TEST
           echo Date: $DATE_TEST
           echo Arbitrary test: $ARB_TEST
-          echo List test: $LIST_TEST
-          echo Json List test: ${{ fromJSON(env.LIST_TEST) }}
+          #echo List test: $LIST_TEST
+          #echo Json List test: ${{ fromJSON(env.LIST_TEST) }}
           echo "BOOLEAN_LOCAL=FALSE" >> "$GITHUB_ENV"
   
       - name: Do math with variables
