--- a/.github/workflows/test-actions.yml
+++ b/.github/workflows/test-actions.yml
@@ -33,7 +33,7 @@ jobs:
           echo Arbitrary test: $ARB_TEST
           #echo List test: $LIST_TEST
           #echo Json List test: ${{ fromJSON(env.LIST_TEST) }}
-          echo "BOOLEAN_LOCAL=FALSE" >> "$GITHUB_ENV"
+          echo "BOOLEAN_LOCAL='FALSE'" >> "$GITHUB_ENV"
   
       - name: Do math with variables
         run: |
