--- a/.github/workflows/test-actions.yml
+++ b/.github/workflows/test-actions.yml
@@ -26,18 +26,18 @@ jobs:
       - name: Print variables
         id: print_vars
         run: |
-          echo "String:" ${{ env.STRING_TEST }}
-          echo "Boolean:" ${{ env.BOOLEAN_TEST }}
-          echo "Numeric:" ${{ env.NUMERIC_TEST }}
-          echo "Date:" ${{ env.DATE_TEST }}
-          echo "Arbitrary test: ${{ env.ARB_TEST }}"
+          echo "String:" $STRING_TEST
+          echo "Boolean:" $BOOLEAN_TEST
+          echo "Numeric:" $NUMERIC_TEST
+          echo "Date:" $DATE_TEST
+          echo "Arbitrary test:" $ARB_TEST
           #echo "List test: ${{ env.LIST_TEST }}"
           #echo "Json List test: ${{ fromJSON(env.LIST_TEST) }}"
           echo "BOOLEAN_LOCAL='FALSE'" >> "$GITHUB_ENV"
   
       - name: Do math with variables
         run: |
-          echo "Adding numbers:" $((${{ env.NUMERIC_TEST }} + ${{ env.NUMERIC_TEST }} + 9))
+          echo "Adding numbers:" $((NUMERIC_TEST + NUMERIC_TEST + 9))
 
       - name: Test boolean local false
         if: ${{ env.BOOLEAN_LOCAL == 'false' }} 
