--- a/.github/workflows/test-actions.yml
+++ b/.github/workflows/test-actions.yml
@@ -30,9 +30,9 @@ jobs:
           echo "Boolean:" $BOOLEAN_TEST
           echo "Numeric:" $NUMERIC_TEST
           echo "Date:" $DATE_TEST
-          echo "Arbitrary test:" $ARB_TEST
-          #echo "List test: ${{ env.LIST_TEST }}"
-          #echo "Json List test: ${{ fromJSON(env.LIST_TEST) }}"
+          # echo "Arbitrary test:" $ARB_TEST
+          # echo "List test: ${{ env.LIST_TEST }}"
+          # echo "Json List test: ${{ fromJSON(env.LIST_TEST) }}"
           echo "BOOLEAN_LOCAL='FALSE'" >> "$GITHUB_ENV"
   
       - name: Do math with variables
