--- a/.github/workflows/test-actions.yml
+++ b/.github/workflows/test-actions.yml
@@ -44,17 +44,17 @@ jobs:
       - name: Test boolean true string
         if: ${{ env.BOOLEAN_TEST == 'true' }} 
         run: |
-          echo "Boolean is true
+          echo "Boolean is true"
           
       - name: Test boolean false string
         if: ${{ env.BOOLEAN_TEST == 'false' }} 
         run: |
-          echo "Boolean is false
+          echo "Boolean is false"
           
       - name: Test boolean hello string
         if: ${{ env.BOOLEAN_TEST == 'Hello' }} 
         run: |
-          echo "Boolean is Hello
+          echo "Boolean is Hello"
 
   # Echo data
   repeat_data:
